# waytorandr

./: .gitignore  AGENTS.md  Cargo.toml  README.md  flake.nix
.github/workflows/: ci.yml
crates/core/: Cargo.toml
crates/core/src/: engine.rs  error.rs  lib.rs  matcher.rs  model.rs  planner.rs  profile.rs  runtime.rs  store.rs
crates/core/tests/: public_workflows.rs
crates/wlroots/: Cargo.toml
crates/wlroots/src/: backend.rs  lib.rs
nix/home-manager/: waytorandr.nix
