[workspace]
resolver = "2"
members = [
  "crates/core",
  "crates/wlroots",
  "bin/waytorandr",
  "bin/waytorandrd",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["waytorandr contributors"]
license = "MIT OR Apache-2.0"
rust-version = "1.75"

[workspace.dependencies]
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.5", features = ["derive", "env"] }
clap_complete = { version = "4.6", features = ["unstable-dynamic"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1.0"
directories = "5.0"
