[package]
name = "waytorandr-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
toml.workspace = true
serde.workspace = true
serde_json = "1.0"
clap.workspace = true
anyhow.workspace = true
tracing.workspace = true
thiserror.workspace = true
once_cell.workspace = true
directories.workspace = true

[dev-dependencies]
tempfile = "3.10"
