[package]
name = "waytorandr-wlroots"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
waytorandr-core = { path = "../core" }
wayland-client = "0.31"
wayland-protocols = { version = "0.31", features = ["staging"] }
wayland-protocols-wlr = { version = "0.3", features = ["client"] }
rustix = { version = "0.38", features = ["process"] }
anyhow.workspace = true
tracing.workspace = true
